tests/baselines/reference/genericGetter.errors.txt
genericGetter.ts(9,5): error TS2322: Type 'number' is not assignable to type 'string'.


==== genericGetter.ts (1 errors) ====
    class C<T> {
        data: T;
        get x(): T {
            return this.data;
        }
    }
    
    var c = new C<number>();
    var r: string = c.x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.